package flyweight;

public class CharacterStyle {
}
