package flyweight;

public class CharacterStyleFactory {
}
