package flyweight;

public class Driver {
    public static void main(String[] args) {
    }
}
