package flyweight;

public enum Font {
    ARIAL,
    CALIBRI,
    VERDANA
}
