package flyweight;

public class StyledCharacter {
}
