package flyweight;

public class StyledString {
}
