package flyweight;

public enum TextColor {
    RED,
    BLUE,
    BLACK
}
